<resources>
    <string name="app_name">TB Loader</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_system_settings_group">System Settings</string>

    <string name="pref_title_device_id">TB Loader Device ID</string>
    <string name="pref_summary_no_device_id">No Device ID configured yet. Please talk to Bill to request one.</string>

    <string name="pref_title_project_filter">Project Filter</string>
    <string name="pref_summary_no_project_filter">No project filter. Will show all projects.</string>

    <string name="pref_title_tb_access">Talking Book Default Access Permission</string>
    <string name="pref_summary_tb_access_granted">Default permission granted.</string>
    <string name="pref_summary_tb_access_not_granted">Default permission not granted.</string>


    <string name="pref_title_advanced_settings_group">Advanced Settings</string>

    <string name="pref_title_show_unpublished">Unpublished deployment packages</string>
    <string name="pref_summary_show_unpublished">Unpublished Deployment Packages can be accessed on this device for testing purposes.</string>
    <string name="pref_summary_show_published_only">Only published Deployment Packages can be accessed on this device.</string>

    <string name="pref_title_allow_install_outdated">Outdated Deployment Packages</string>
    <string name="pref_summary_allow_install_outdated_not_allowed">It is only allowed to install the latest revision of a Deployment Package on a Talking Book.</string>
    <string name="pref_summary_allow_install_outdated_allowed">Outdated Deployment Packages may be installed on a Talking Book.</string>

    <string name="deployment_version">Version: %s</string>
    <string name="deployment_size">Size: %s</string>
    <string name="deployment_package_expiration">Expires: %s</string>
    <string name="deployment_package_expiration_never">Never</string>

    <string name="deployment_package_download">Download</string>
    <string name="deployment_package_download_retry">Retry Download</string>
    <string name="deployment_package_download_update">Update</string>
    <string name="deployment_package_download_remove">Remove</string>
    <string name="deployment_package_choose">Choose</string>

    <string name="talking_book_connection_status_text">Connected to Talking Book: %1$s</string>
    <string name="talking_book_not_connected_status_text">No Talking Book connected</string>

    <string name="pick_project_dialog_title">Select Project</string>
    <string name="pick_community_dialog_title">Select Community</string>

    <string name="dialog_tb_update_deployment_info">Project: %1$s\nDeployment: %2$s\nCommunity: %3$s</string>

    <!-- Copied from demo app -->
    <string name="app_main_screen">Login</string>
    <string name="app_main_screen_title">Talking Book Loader</string>
    <string name="app_main_desc">A very portable TB-Loader.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about">Copyright 2016-2020 Literacy Bridge. Talking Book Loader application, for use by Literacy Bridge and partner organizations.</string>
    <string name="more_info">This is a highly portable Talking Book Loader.</string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="pref_title_disable_uploads">Disable uploading statistics and User Feedback.</string>
    <string name="pref_title_simulate_device">Simulate Talking Book device.</string>
    <string name="pref_summary_simulate_device">Simulate a Talking Book using storage on the SD card.</string>
    <string name="pref_summary_physical_device">Use only a physical Talking Book device.</string>


    <string name="checkin_gps_coordinates_label">GPS coordinates</string>
    <string name="checkin_waiting_for_gps_label">Waiting for gps…</string>

    <string name="checkin_set_gps_location_button_label">Set GPS location for community...</string>
    <string name="checkin_updating_community_today_button_label">Add Community to update today...</string>

    <string name="checkin_community_groups_at_this_location_label">Community Groups at this location</string>
    <string name="checkin_community_groups_to_update_today_label">Community Groups to update today</string>

    <string name="pref_title_prefer_network_location">Prefer getting location from network, not GPS.</string>
    <string name="pref_summary_prefer_network">The device will try first to get location from the network, not GPS. This may be faster, but less accurate, and may not work in remote areas.</string>
    <string name="pref_summary_prefer_gps">The device will try first to get location from GPS, not the network. This will be more accurate, and works in remote areas, but may be slower.</string>
    <string name="pref_summary_location_preference">When checked, the device will try first to get location from the network, which may be faster, but less accurate, and may not work in remote areas. When unchecked, the device will try first to get location from GPS, which will be more accurate, and works in remote areas, but may be slower.</string>

    <string name="edit_greeting">Edit preferred greeting</string>
    <string name="main_greeting_default">Hello, Friend!</string>
    <string name="main_open_app_notifications_body">TB-Loader can display a notification icon in the status bar whenever there are statistics or user feedback waiting to be uploaded. To enable this feature, turn on the \'Important Notice\' setting for TB-Loader.\n\nIf you choose not to enable the feature, notifications will be displayed in a secondary area, indicated by \'…\' in the status bar.\n\nTap Ok to open the \'App notifications\' settings. Then choose \'Set to important notice.\'</string>
    <string name="main_open_app_notifications_title">Open App Notifications</string>
    <string name="main_no_stats_files_to_upload">No statistics files to upload.</string>
    <string name="main_n_stats_files_to_upload">%1$s in %2$d stats file(s) to upload.</string>
    <string name="main_n_bytes_to_upload">%s left to upload.</string>

    <string name="filtered_chooser_sort_distance_checkbox">Sort by distance</string>
    <string name="filtered_chooser_project_label">Project</string>

    <string name="deployment_ready_to_use">Ready to use</string>
    <string name="checkin_project_label">Project</string>
    <string name="checkin_n_projects_format">%d projects</string>
    <string name="checkin_tap_to_choose_project_label">Tap to choose project.</string>
    <string name="do_not_disconnect">Do not disconnect the Talking Book!</string>
    <string name="establishing_connection">Establishing connection to Talking Book [%d]...</string>
    <string name="pref_summary_uploads_disabled">Uploads are disabled.</string>
    <string name="pref_summary_uploads_enabled">Uploads are enabled.</string>
    <string name="upload_for_user">Upload for user</string>
    <string name="show_upload_status">Show upload status</string>
    <string name="main_label_get_statistics_only">Collect Statistics Only</string>
    <string name="main_label_update_talking_books">Update Talking Books</string>
    <string name="main_label_check_in">Check In</string>
    <string name="main_label_manage_content">Manage Content</string>
    <string name="updater_collect_stats_title">Collect Statistics</string>
    <string name="update_step_label">Update Step:</string>
    <string name="statistics_step_label">Statistics Step</string>
    <string name="list_item_deployment_downloading">Downloading...</string>
    <string name="list_item_deployment_unzipping">Processing...</string>
    <string name="list_item_deployment_waiting">Waiting...</string>
    <string name="prompt_password">Password</string>
    <string name="deploying_for_testing">Deploying today for testing only.</string>
    <string name="no_talking_book_connected">No Talking Book connected.</string>
    <string name="recipient_chooser_preselection_prompt">Preselect as much (or as little) as convenient of the Geographic and Organizational location of the Talking Books to be installed today. Later, when you "Choose Community", the selection will start with whatever you chose here.</string>
    \
    \
    \

    <string name="recipient_chooser_project_label">Selecting recipient(s) for project</string>
    <string name="CANT_ALLOCATE_SRN">Could not allocate a new Serial Number.</string>
    <string name="email_address">Email address</string>

</resources>
