<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_system_settings_group"
        android:key="pref_key_system_settings">

        <EditTextPreference
            android:key="tbcd"
            android:title="@string/pref_title_device_id"
            android:summary="@string/pref_summary_no_device_id"/>

        <EditTextPreference
            android:key="projects"
            android:title="@string/pref_title_project_filter"
            android:summary="@string/pref_summary_no_project_filter"/>

        <CheckBoxPreference
            android:key="pref_prefer_network_location"
            android:title="@string/pref_title_prefer_network_location"/>

        <Preference
            android:key="pref_tb_access"
            android:title="@string/pref_title_tb_access">
            <intent
                android:targetPackage="org.literacybridge.archived_androidtbloader"
                android:targetClass="org.literacybridge.archived_androidtbloader.talkingbook.TalkingBookConnectionSetupActivity">
                <extra android:name="org.literacybridge.archived_androidtbloader.request_default_permission" android:value="true" />
            </intent>

        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_advanced_settings_group"
        android:key="pref_key_advanced_settings">

        <CheckBoxPreference
            android:key="pref_simulate_device"
            android:title="@string/pref_title_simulate_device"/>

        <CheckBoxPreference
            android:key="pref_disable_uploads"
            android:title="@string/pref_title_disable_uploads"/>

        <CheckBoxPreference
            android:key="pref_show_unpublished"
            android:title="@string/pref_title_show_unpublished"/>

        <CheckBoxPreference
            android:key="pref_allow_install_outdated"
            android:title="@string/pref_title_allow_install_outdated"/>
    </PreferenceCategory>
</PreferenceScreen>
