<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe"
    android:orientation="vertical"
    android:padding="4dp">

    <!-- GPS Coordinates -->

    <LinearLayout
        android:id="@+id/checkin_gps_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin_gps_coordinates_label"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/checkin_gps_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin_waiting_for_gps_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/checkin_gps_elapsed_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkin_project_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkin_gps_group"
        android:layout_margin="4dp"
        android:background="#ffffc8"
        android:orientation="vertical">


        <!-- Project name -->
        <TextView
            android:id="@+id/checkin_project_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            tools:text="Tap to choose -or- Auto chosen" />

        <TextView
            android:id="@+id/checkin_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            tools:text="DEMO" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkin_recipient_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkin_project_group"
        android:layout_margin="4dp"
        android:background="#f0ffff"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            tools:text="Preselected recipients (tap to edit)"></TextView>

        <TextView
            android:id="@+id/checkin_recipient_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Ghana\n  UWR\n    Jirapa\n      Ving-Ving"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkin_bottom_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/deploying_for_testing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deploying_for_testing"
            tools:text="Deploying today for testing only." />

        <!-- Do the check in -->
        <Button
            android:id="@+id/checkin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/TB_RED"
            android:scaleType="fitCenter"
            android:text="Check In!"
            tools:text="Check In!" />


    </LinearLayout>

</RelativeLayout>
